--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
     <!--Configuration files-->
     <script src="./Scripts/config/scene.js"></script>
+    <script src="./Scripts/config/keys.js"></script>
+    <script src="./Scripts/math/vec2.js"></script>
 
     <!--Object Scripts-->
-    <script src="./Scripts/objects/game.js"></script>
     <script src="./Scripts/objects/button.js"></script>
     <script src="./Scripts/objects/label.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
@@ -29,6 +30,13 @@
     <script src="./Scripts/objects/background.js"></script>
     <script src="./Scripts/objects/player.js"></script>
     <script src="./Scripts/objects/enemy.js"></script>
+    <script src="./Scripts/objects/bullet.js"></script>
+    
+    <!--Game Managers-->
+    <script src="./Scripts/managers/game.js"></script>
+    <script src="./Scripts/managers/keyboard.js"></script>
+    <script src="./Scripts/managers/collision.js"></script>
+    <script src="./Scripts/managers/scoreboard.js"></script>
     
     <!--Scene Scripts-->
     <script src="./Scripts/scenes/start.js"></script>
